@@ -1,5 +1,5 @@
+	; Basic ROUT and local label test.
 
-	; Basic ROUT test.
 	AREA	Code1, CODE, READONLY
 	[ :LNOT: REFERENCE
 
@@ -8,6 +8,10 @@ xyz	ROUT
 02	MOV	r1, #2
 	B	%01
 	B	%02xyz
+
+|.xyz|	ROUT
+03	MOV	r1, #3
+	B	%03|.xyz|
 	
 	|
 
@@ -15,6 +19,9 @@ c1lbl1	MOV	r1, #1
 c1lbl2	MOV	r1, #2
 	B	c1lbl1
 	B	c1lbl2
+
+c1lbl3	MOV	r1, #3
+	B	c1lbl3
 
 	]
 	
